--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -4,50 +4,24 @@ on:
   workflow_dispatch
 
 jobs:
-  build_amd64:
-    runs-on: buildjet-4vcpu-ubuntu-2204
-    steps:
-    - uses: actions/checkout@v3.1.0
-
-    - name: Install needed packages
-      run: |
-        sudo rm -rf /var/lib/apt/lists/*
-        sudo sed -i 's/jammy/.\/devel/g' /etc/apt/sources.list
-        sudo apt-get update && sudo apt-get install --reinstall debootstrap -y
-        sudo ln -sfn /usr/share/debootstrap/scripts/gutsy /usr/share/debootstrap/scripts/lunar
-        sudo dpkg -i debs/live-build_*_all.deb
-        sudo mv /usr/share/debootstrap/functions functions
-        sudo patch -i 0002-remove-WRONGSUITE-error.patch
-        sudo mv functions /usr/share/debootstrap/functions
-        sudo cp binary_grub-efi /usr/lib/live/build/binary_grub-efi
-
-    - name: Make scripts executable
-      run: chmod -R +x build.sh etc/auto/config etc/terraform.conf etc/
-
-    - name: Build ISO
-      run: sudo ./build.sh etc/terraform.conf
-
-    - uses: actions/upload-artifact@v3.1.0
-      with:
-        name: Rhino Linux OS (AMD64)
-        path: builds/amd64/
-        
-  build_arm64:
+  build_pinephone_pro:
     runs-on: buildjet-4vcpu-ubuntu-2204-arm
     steps:
     - uses: actions/checkout@v3.1.0
 
     - name: Install needed packages
       run: |
+        sudo rm -rf /etc/apt/sources.list.d/microsoft-prod.list
         sudo rm -rf /var/lib/apt/lists/*
         sudo sed -i 's/jammy/.\/devel/g' /etc/apt/sources.list
-        sudo apt-get update && sudo apt-get install --reinstall debootstrap -y
+        sudo apt-get update && sudo apt-get install --reinstall debootstrap mtools dosfstools -y
         sudo ln -sfn /usr/share/debootstrap/scripts/gutsy /usr/share/debootstrap/scripts/lunar
         sudo dpkg -i debs/live-build_*_all.deb
         sudo mv /usr/share/debootstrap/functions functions
         sudo patch -i 0002-remove-WRONGSUITE-error.patch
         sudo mv functions /usr/share/debootstrap/functions
         sudo cp binary_grub-efi /usr/lib/live/build/binary_grub-efi
+        sudo cp binary_rootfs /usr/lib/live/build/binary_rootfs
         
     - name: Make scripts executable
       run: chmod -R +x build.sh etc/auto/config etc/terraform.conf etc/
@@ -57,5 +31,5 @@ jobs:
 
     - uses: actions/upload-artifact@v3.1.0
       with:
-        name: Rhino Linux OS (ARM64)
+        name: Rhino Linux OS (PinePhonePro)
         path: builds/arm64/
