--- a/etc/auto/config
+++ b/etc/auto/config
@@ -11,6 +11,7 @@ lb config noauto \
     --initsystem systemd \
     --distribution "./$BASECODENAME" \
     --parent-distribution "./$BASECODENAME" \
+    --qemu-bootstrap-arch arm64 \
     --linux-flavours "generic" \
     --archive-areas "main restricted universe multiverse" \
     --parent-archive-areas "main restricted universe multiverse" \
