--- a/etc/auto/config
+++ b/etc/auto/config
@@ -44,9 +44,8 @@ lb config noauto \
     --debconf-frontend noninteractive \
     --compression xz \
     --checksums md5 \
-    if [ $(dpkg --print-architecture) = amd64]; then
-    --bootstrap-qemu-arch arm64 \
-    --bootstrap-qemu-static /usr/bin/qemu-aarch64-static \; fi
+    --bootstrap-qemu-arch "$QEMU_ARCH" \
+    --bootstrap-qemu-static "$QEMU_STATIC" \
     "${@}"
 
 
