--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -30,7 +30,7 @@ SECURITY_URL="$MIRROR_URL"
 # suffix for generated .iso files
 OUTPUT_SUFFIX=""
 
-if [ $(dpkg --print-architecture = amd64 ]; then
+if [ $(dpkg --print-architecture) = amd64 ]; then
 QEMU_ARCH="arm64"
 QEMU_STATIC="/usr/bin/qemu-aarch64-static"; fi
 
