--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -24,7 +24,7 @@ jobs:
         sudo cp binary_rootfs /usr/lib/live/build/binary_rootfs
         
     - name: Make scripts executable
-      run: chmod -R +x build.sh etc/auto/config etc/terraform.conf etc/
+      run: chmod -R +x build.sh dwndock.sh etc/auto/config etc/terraform.conf etc/
 
     - name: Build tarball
       run: sudo ./build.sh etc/terraform.conf
