--- a/pinephonepro.yaml
+++ b/pinephonepro.yaml
@@ -9,10 +9,15 @@
 # PHASE 1: begin with ubuntu touch base image
 architecture: {{ $architecture }}
 actions:
+  - action: overlay
+     description: Setup base rootfs
+     source: binary
+     destination: /
+
   - action: run
     description: unpacking rootfs
     chroot: false
-    command: tar --strip-components=1 --numeric-owner -xf binary/Rhino*.tar -C root && rm binary/Rhino*.tar
+    command: tar --strip-components=1 --numeric-owner -xf /Rhino*.tar -C root && rm /Rhino*.tar
 
   - action: run
     description: Remove apt caches to save space
