use proper naming scheme

--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -13,7 +13,12 @@ BASEVERSION="devel"
 CODENAME="devel"
 
 # distribution version
-VERSION="$(date -I | sed 's/-/./g')"
+RELEASE="1"
+SUBVER="-beta1"
+VERSION="$(date +%Y).$RELEASE"
+
+# full image name
+FNAME="Rhino-Linux-$VERSION$SUBVER-$ARCH"
 
 # distribution channel
 #CHANNEL="unstable"
