--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch
 
 jobs:
-  build_pinephone_pro:
+  build_tarball:
     runs-on: buildjet-4vcpu-ubuntu-2204
     steps:
     - uses: actions/checkout@v3.1.0
@@ -29,17 +29,34 @@ jobs:
     - name: Build tarball
       run: sudo ./build.sh etc/terraform.conf
 
+  deploy_pinephone_pro:
+    needs: build_tarball
     - name: Deploy to partition
       run: sudo ./debos-docker -m 10G pinephonepro.yaml 
       
     - name: Place output folder
-      run: sudo mkdir -p builds/pine
+      run: sudo mkdir -p builds/pinepro
       
     - name: Move to output folder
-      run: sudo mv Rhino*.img builds/pine/
+      run: sudo mv Rhino*.img builds/pinepro/
 
     - uses: actions/upload-artifact@v3.1.0
       with:
         name: Rhino Linux OS (PinePhonePro)
-        path: builds/pine/
+        path: builds/pinepro/
 
+  deploy_pinephone:
+    needs: build_tarball
+    - name: Deploy to partition
+      run: sudo ./debos-docker -m 10G pinephone.yaml 
+      
+    - name: Place output folder
+      run: sudo mkdir -p builds/pine64
+      
+    - name: Move to output folder
+      run: sudo mv Rhino*.img builds/pine64/
+
+    - uses: actions/upload-artifact@v3.1.0
+      with:
+        name: Rhino Linux OS (PinePhone)
+        path: builds/pine64/
