--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -31,29 +31,42 @@ jobs:
 
   deploy_pinephone_pro:
     needs: build_tarball
-    run: |
-      sudo ./debos-docker -m 10G pinephonepro.yaml 
-      sudo mkdir -p builds/pinepro
-      sudo mv Rhino*.img builds/pinepro/
+    runs-on: buildjet-4vcpu-ubuntu-2204
+    steps:
+    - name: Deploy to partition
+      run: sudo ./debos-docker -m 10G pinephonepro.yaml 
+      
+    - name: Place output folder
+      run: sudo mkdir -p builds/pinepro
+      
+    - name: Move to output folder
+      run: sudo mv Rhino*pro.img builds/pinepro/
 
-    uses: actions/upload-artifact@v3.1.0
-    with:
+    - uses: actions/upload-artifact@v3.1.0
+      with:
         name: Rhino Linux OS (PinePhonePro)
         path: builds/pinepro/
 
   deploy_pinephone:
     needs: build_tarball
-    run: |
-      sudo ./debos-docker -m 10G pinephone.yaml 
-      sudo mkdir -p builds/pine64
-      sudo mv Rhino*.img builds/pine64/
-
-    uses: actions/upload-artifact@v3.1.0
-    with:
-        name: Rhino Linux OS (PinePhone)
-        path: builds/pine64/
+    runs-on: buildjet-4vcpu-ubuntu-2204
+    steps:
+    - name: Deploy to partition
+      run: sudo ./debos-docker -m 10G pinephone.yaml 
+      
+    - name: Place output folder
+      run: sudo mkdir -p builds/pine64
+      
+    - name: Move to output folder
+      run: sudo mv Rhino*pinephone.img builds/pine64/
 
     - uses: actions/upload-artifact@v3.1.0
       with:
         name: Rhino Linux OS (PinePhone)
         path: builds/pine64/
+
+
+
+
+
+
