--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -28,14 +28,33 @@ jobs:
 
     - name: Build tarball
       run: sudo ./build.sh etc/terraform.conf
+      
+    - name: Copy hash for cache
+      run: |
+        sudo mv binary/*.sha256 binary/hash.sha256
+        sudo cp binary/hash.sha256 hash.sha256
+      
+    - uses: actions/cache@v3.1.0
+      with:
+        name: Caching tarball
+        path: binary/
+        key: tarball-${{ hashFiles('hash.sha256') }}
 
   deploy_pinephone_pro:
     needs: build_tarball
     runs-on: buildjet-4vcpu-ubuntu-2204
     steps:
+    - uses: actions/cache@v3.1.0
+      with:
+        name: Pickup tarball
+        id: pickup
+        path: binary/
+        key: tarball-${{ hashFiles('hash.sha256') }}
+        
     - uses: actions/checkout@v3.1.0
     
     - name: Deploy to partition
+      if: steps.pickup.outputs.cache-hit != 'true'
       run: sudo ./debos-docker -m 10G pinephonepro.yaml 
       
     - name: Place output folder
@@ -53,9 +72,17 @@ jobs:
     needs: build_tarball
     runs-on: buildjet-4vcpu-ubuntu-2204
     steps:
+    - uses: actions/cache@v3.1.0
+      with:
+        name: Pickup tarball
+        id: pickup
+        path: binary/
+        key: tarball-${{ hashFiles('hash.sha256') }}
+        
     - uses: actions/checkout@v3.1.0
     
     - name: Deploy to partition
+      if: steps.pickup.outputs.cache-hit != 'true'
       run: sudo ./debos-docker -m 10G pinephone.yaml 
       
     - name: Place output folder
