--- a/pinephone.yaml
+++ b/pinephone.yaml
@@ -22,12 +22,12 @@ actions:
   - action: run
     description: place alsa symlink
     chroot: true
-    command: ln -s /usr/share/alsa/ucm2/PinePhone/PinePhone.conf /usr/share/alsa/ucm2/conf.d/simple-card/PinePhone.conf
+    command: ln -s /usr/share/alsa/ucm2/PinePhone/PinePhone.conf /usr/share/alsa/ucm2/conf.d/simple-card/PinePhone.conf  && apt-get remove linux*6.1* -yq
 
   - action: overlay
     description: Add extlinux modifier
     source: scripts/pine64
-    destination: /etc/kernel/postinst.d && apt-get remove linux*6.1* -yq
+    destination: /etc/kernel/postinst.d
 
   - action: run
     description: sudo workaround
