--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build_tarball:
-    runs-on: buildjet-4vcpu-ubuntu-2204-arm
+    runs-on: buildjet-8vcpu-ubuntu-2204-arm
     steps:
     - uses: actions/checkout@v3.1.0
 
@@ -14,7 +14,7 @@ jobs:
         sudo rm -rf /etc/apt/sources.list.d/microsoft-prod.list
         sudo rm -rf /var/lib/apt/lists/*
         sudo sed -i 's/jammy/.\/devel/g' /etc/apt/sources.list
-        sudo apt-get update && sudo apt-get install debootstrap mtools dosfstools qemu-user-static binfmt-support -y
+        sudo apt-get update && sudo apt-get install debootstrap -y
         sudo ln -sfn /usr/share/debootstrap/scripts/gutsy /usr/share/debootstrap/scripts/lunar
         sudo dpkg -i debs/live-build_*_all.deb
         sudo mv /usr/share/debootstrap/functions functions
