--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -59,3 +59,89 @@ jobs:
       with:
         name: Rhino Linux OS (ARM64)
         path: builds/arm64/
+
+  build_pine_tarball:
+    runs-on: buildjet-4vcpu-ubuntu-2204-arm
+    steps:
+    - uses: actions/checkout@v3.1.0
+      with:
+        ref: 'pinephone'
+
+    - name: Install needed packages
+      run: |
+        sudo rm -rf /etc/apt/sources.list.d/microsoft-prod.list
+        sudo rm -rf /var/lib/apt/lists/*
+        sudo sed -i 's/jammy/.\/devel/g' /etc/apt/sources.list
+        sudo apt-get update && sudo apt-get install debootstrap mtools dosfstools qemu-user-static binfmt-support -y
+        sudo ln -sfn /usr/share/debootstrap/scripts/gutsy /usr/share/debootstrap/scripts/lunar
+        sudo dpkg -i debs/live-build_*_all.deb
+        sudo mv /usr/share/debootstrap/functions functions
+        sudo patch -i 0002-remove-WRONGSUITE-error.patch
+        sudo mv functions /usr/share/debootstrap/functions
+        sudo cp binary_grub-efi /usr/lib/live/build/binary_grub-efi
+        sudo cp binary_rootfs /usr/lib/live/build/binary_rootfs
+        
+    - name: Make scripts executable
+      run: chmod -R +x build.sh etc/auto/config etc/terraform.conf etc/
+
+    - name: Build tarball
+      run: sudo ./build.sh etc/terraform.conf
+      
+    - uses: actions/cache@v3.3.1
+      with:
+        path: binary/
+        key: tarball-${{ github.sha }}
+
+  deploy_pinephone_pro:
+    needs: build_pine_tarball
+    runs-on: buildjet-4vcpu-ubuntu-2204
+    steps:
+    - uses: actions/checkout@v3.1.0
+      with:
+        ref: 'pinephone'
+    
+    - uses: actions/cache@v3.3.1
+      with:
+        path: binary/
+        key: tarball-${{ github.sha }}
+        
+    - name: Deploy to partition
+      run: sudo ./debos-docker -m 10G pinephonepro.yaml
+      
+    - name: Place output folder
+      run: sudo mkdir -p builds/pinepro
+      
+    - name: Move to output folder
+      run: sudo mv Rhino*pro.img builds/pinepro/
+
+    - uses: actions/upload-artifact@v3.1.0
+      with:
+        name: Rhino Linux OS (PinePhonePro)
+        path: builds/pinepro/
+
+  deploy_pinephone:
+    needs: build_pine_tarball
+    runs-on: buildjet-4vcpu-ubuntu-2204
+    steps:
+    - uses: actions/checkout@v3.1.0
+      with:
+        ref: 'pinephone'
+    
+    - uses: actions/cache@v3.3.1
+      with:
+        path: binary/
+        key: tarball-${{ github.sha }}
+    
+    - name: Deploy to partition
+      run: sudo ./debos-docker -m 10G pinephone.yaml
+      
+    - name: Place output folder
+      run: sudo mkdir -p builds/pine64
+      
+    - name: Move to output folder
+      run: sudo mv Rhino*pinephone.img builds/pine64/
+
+    - uses: actions/upload-artifact@v3.1.0
+      with:
+        name: Rhino Linux OS (PinePhone)
+        path: builds/pine64/
