--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -1,4 +1,4 @@
-name: RL OS ISO Generation
+name: Rhino Linux Image Generation
 
 on:
   workflow_dispatch
@@ -29,7 +29,7 @@ jobs:
 
     - uses: actions/upload-artifact@v3.1.0
       with:
-        name: Rhino Linux OS (AMD64)
+        name: Rhino Linux ISO (AMD64)
         path: builds/amd64/
         
   build_arm64:
@@ -57,7 +57,7 @@ jobs:
 
     - uses: actions/upload-artifact@v3.1.0
       with:
-        name: Rhino Linux OS (ARM64)
+        name: Rhino Linux ISO (ARM64)
         path: builds/arm64/
 
   build_pine_tarball:
@@ -116,7 +116,7 @@ jobs:
 
     - uses: actions/upload-artifact@v3.1.0
       with:
-        name: Rhino Linux OS (PinePhonePro)
+        name: Rhino Linux Pre-Built (PinePhonePro)
         path: builds/pinepro/
 
   deploy_pinephone:
@@ -143,5 +143,7 @@ jobs:
 
     - uses: actions/upload-artifact@v3.1.0
       with:
-        name: Rhino Linux OS (PinePhone)
+        name: Rhino Linux Pre-Built (PinePhone)
         path: builds/pine64/
+
+
