--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -1,7 +1,7 @@
 #!/bin/sh
 
 # target architecture - i386, arm64 or all
-ARCH="$(dpkg --print-architecture)"
+ARCH="arm64"
 
 # base codename
 BASECODENAME="devel"
@@ -23,25 +23,15 @@ CHANNEL="all"
 NAME="Rhino Linux"
 
 # mirror to fetch packages from
-if [ $ARCH = arm64 ]; then 
-MIRROR_URL="http://ports.ubuntu.com/ubuntu-ports/"; 
-else MIRROR_URL="http://archive.ubuntu.com/ubuntu/"; 
-fi
+MIRROR_URL="http://ports.ubuntu.com/ubuntu-ports/"
 
-if [ $ARCH = arm64 ]; then 
-SECURITY_URL="$MIRROR_URL"; 
-else SECURITY_URL="http://security.ubuntu.com/ubuntu/"; 
-fi
-
-# bootloaders tweak
-
-if [ $ARCH = arm64 ]; then 
-BOOTLOADERS=""; 
-else BOOTLOADERS="syslinux grub-efi"; 
-fi
+SECURITY_URL="$MIRROR_URL"
 
 # suffix for generated .iso files
 OUTPUT_SUFFIX=""
 
+if [ $(dpkg --print-architecture) = amd64 ]; then
+QEMU_ARCH="arm64"
+QEMU_STATIC="/usr/bin/qemu-aarch64-static"; fi
+
 # folder suffix for the package lists to use
-PACKAGE_LISTS_SUFFIX="calamares"
