--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -1,10 +1,10 @@
-name: RL OS ISO Generation
+name: Rhino Linux Image Generation
 
 on:
   workflow_dispatch
 
 jobs:
-  build_pinephone_pro:
+  build_tarball:
     runs-on: buildjet-4vcpu-ubuntu-2204-arm
     steps:
     - uses: actions/checkout@v3.1.0
@@ -14,7 +14,7 @@ jobs:
         sudo rm -rf /etc/apt/sources.list.d/microsoft-prod.list
         sudo rm -rf /var/lib/apt/lists/*
         sudo sed -i 's/jammy/.\/devel/g' /etc/apt/sources.list
-        sudo apt-get update && sudo apt-get install --reinstall debootstrap mtools dosfstools -y
+        sudo apt-get update && sudo apt-get install debootstrap mtools dosfstools qemu-user-static binfmt-support -y
         sudo ln -sfn /usr/share/debootstrap/scripts/gutsy /usr/share/debootstrap/scripts/lunar
         sudo dpkg -i debs/live-build_*_all.deb
         sudo mv /usr/share/debootstrap/functions functions
@@ -26,10 +26,35 @@ jobs:
     - name: Make scripts executable
       run: chmod -R +x build.sh etc/auto/config etc/terraform.conf etc/
 
-    - name: Build ISO
+    - name: Build tarball
       run: sudo ./build.sh etc/terraform.conf
+      
+    - uses: actions/cache@v3.3.1
+      with:
+        path: binary/
+        key: tarball-${{ github.sha }}
+
+  deploy_rpi4:
+    needs: build_tarball
+    runs-on: buildjet-4vcpu-ubuntu-2204
+    steps:     
+    - uses: actions/checkout@v3.1.0
+    
+    - uses: actions/cache@v3.3.1
+      with:
+        path: binary/
+        key: tarball-${{ github.sha }}
+        
+    - name: Deploy to partition
+      run: sudo ./debos-docker -m 10G raspberrypi.yaml
+      
+    - name: Place output folder
+      run: sudo mkdir -p builds/rpi4
+      
+    - name: Move to output folder
+      run: sudo mv Rhino*rpi4.img builds/rpi4/
 
     - uses: actions/upload-artifact@v3.1.0
       with:
-        name: Rhino Linux OS (PinePhonePro)
-        path: builds/arm64/
+        name: Rhino Linux Pre-Built (RPi4)
+        path: builds/rpi4/
