--- a/etc/config/bootloaders/grub-pc/grub.cfg
+++ b/etc/config/bootloaders/grub-pc/grub.cfg
@@ -12,18 +12,18 @@ set menu_color_highlight=black/light-gray
 set timeout=5
 menuentry "Try or Install Rhino Linux OS" {
  set gfxpayload=keep
- linux	/boot/vmlinuz-6.2.0-okpine-pro boot=consoleblank=0 loglevel=7 ro quiet splash plymouth.ignore-serial-consoles vt.global_cursor_default=0 ---
- initrd	/boot/initrd.img-6.2.0-okpine-pro
+ linux	/casper/vmlinuz boot=casper quiet splash ---
+ initrd	/casper/initrd.lz
 }
 menuentry "Try or Install Rhino Linux OS (Safe Graphics)" {
  set gfxpayload=keep
- linux	/boot/vmlinuz-6.2.0-okpine-pro boot=consoleblank=0 loglevel=7 ro quiet splash plymouth.ignore-serial-consoles vt.global_cursor_default=0 ---
- initrd	/boot/initrd.img-6.2.0-okpine-pro
+ linux	/casper/vmlinuz boot=casper nomodeset quiet splash ---
+ initrd	/casper/initrd.lz
 }
 menuentry "OEM install (for manufacturers)" {
 	set gfxpayload=keep
-	linux	/boot/vmlinuz-6.2.0-okpine-pro boot=consoleblank=0 loglevel=7 ro quiet splash plymouth.ignore-serial-consoles vt.global_cursor_default=0 ---
- 	initrd	/boot/initrd.img-6.2.0-okpine-pro
+	linux	/casper/vmlinuz boot=casper oem-config/enable=true quiet splash --- 
+	initrd	/casper/initrd.lz
 }
 grub_platform
 if [ "$grub_platform" = "efi" ]; then
