--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -1,7 +1,7 @@
 #!/bin/sh
 
 # target architecture - i386, arm64 or all
-ARCH="arm64"
+ARCH="$(dpkg --print-architecture)"
 
 # base codename
 BASECODENAME="devel"
@@ -13,7 +13,12 @@ BASEVERSION="devel"
 CODENAME="devel"
 
 # distribution version
-VERSION="$(date -I | sed 's/-/./g')"
+RELEASE="1"
+SUBVER="-beta1"
+VERSION="$(date +%Y).$RELEASE"
+
+# full image name
+FNAME="Rhino-Linux-$VERSION$SUBVER-$ARCH"
 
 # distribution channel
 #CHANNEL="unstable"
@@ -23,15 +28,25 @@ CHANNEL="all"
 NAME="Rhino Linux"
 
 # mirror to fetch packages from
-MIRROR_URL="http://ports.ubuntu.com/ubuntu-ports/"
+if [ $ARCH = arm64 ]; then 
+MIRROR_URL="http://ports.ubuntu.com/ubuntu-ports/"; 
+else MIRROR_URL="http://archive.ubuntu.com/ubuntu/"; 
+fi
 
-SECURITY_URL="$MIRROR_URL"
+if [ $ARCH = arm64 ]; then 
+SECURITY_URL="$MIRROR_URL"; 
+else SECURITY_URL="http://security.ubuntu.com/ubuntu/"; 
+fi
+
+# bootloaders tweak
+
+if [ $ARCH = arm64 ]; then 
+BOOTLOADERS="grub-efi"; 
+else BOOTLOADERS="syslinux grub-efi"; 
+fi
 
 # suffix for generated .iso files
 OUTPUT_SUFFIX=""
 
-if [ $(dpkg --print-architecture) = amd64 ]; then
-QEMU_ARCH="arm64"
-QEMU_STATIC="/usr/bin/qemu-aarch64-static"; fi
-
 # folder suffix for the package lists to use
+PACKAGE_LISTS_SUFFIX="calamares"
