--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -18,7 +18,7 @@ SUBVER="-beta1"
 VERSION="$(date +%Y).$RELEASE"
 
 # full image name
-FNAME="Rhino-Linux-$VERSION$SUBVER-$ARCH"
+FNAME="Rhino-Linux-$VERSION$SUBVER-rpi4"
 
 # distribution channel
 #CHANNEL="unstable"
