ok actually here

--- a/etc/auto/config
+++ b/etc/auto/config
@@ -13,8 +13,8 @@ lb config noauto \
     --parent-distribution "./${BASECODENAME}" \
     --archive-areas "main restricted universe multiverse" \
     --parent-archive-areas "main restricted universe multiverse" \
-    --linux-packages "linux linux-tools linux-modules-extra" \
-    --linux-flavours "raspi_6.2.0.1003.4" \
+    --linux-packages "linux-6.2.0.1003.4 linux-tools-6.2.0.1003.4 linux-modules-extra-6.2.0.1003.4" \
+    --linux-flavours "raspi" \
     --mirror-bootstrap "$MIRROR_URL" \
     --parent-mirror-bootstrap "$MIRROR_URL" \
     --mirror-chroot-security "$SECURITY_URL" \
