--- a/etc/auto/config
+++ b/etc/auto/config
@@ -10,11 +10,11 @@ lb config noauto \
     --initramfs none \
     --initsystem systemd \
     --distribution "./$BASECODENAME" \
-    --parent-distribution "./${BASECODENAME}" \
+    --parent-distribution "./$BASECODENAME" \
     --archive-areas "main restricted universe multiverse" \
     --parent-archive-areas "main restricted universe multiverse" \
-    --linux-packages "linux linux-tools linux-modules-extra" \
-    --linux-flavours "raspi" \
+    --linux-packages "linux-image linux-headers linux-modules linux-tools linux-modules-extra" \
+    --linux-flavours "6.2.0-1003-raspi" \
     --mirror-bootstrap "$MIRROR_URL" \
     --parent-mirror-bootstrap "$MIRROR_URL" \
     --mirror-chroot-security "$SECURITY_URL" \
