--- a/etc/auto/config
+++ b/etc/auto/config
@@ -7,9 +7,8 @@ set -e
 lb config noauto \
     --architectures "$ARCH" \
     --mode debian \
-    --initramfs live-boot \
+    --initramfs none \
     --initsystem systemd \
-    --system live \
     --bootappend-live "boot=live config hostname=pi username=pi" \
     --distribution "./$BASECODENAME" \
     --parent-distribution "./$BASECODENAME" \
