--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Make scripts executable
       run: chmod -R +x build.sh etc/auto/config etc/terraform.conf etc/
 
-    - name: Build ISO
+    - name: Build IMG
       run: sudo ./build.sh etc/terraform.conf
 
     - uses: actions/upload-artifact@v3.1.0
