use ext4 so I can mount for debug

--- a/etc/auto/config
+++ b/etc/auto/config
@@ -36,7 +36,7 @@ lb config noauto \
     --firmware-binary false \
     --firmware-chroot false \
     --binary-filesystem fat32 \
-    --chroot-filesystem squashfs \
+    --chroot-filesystem ext4 \
     --hdd-label "RHINO_LINUX" \
     --zsync false \
     --security true \
