--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -25,10 +25,35 @@ jobs:
     - name: Make scripts executable
       run: chmod -R +x build.sh etc/auto/config etc/terraform.conf etc/
 
-    - name: Build IMG
+    - name: Build tarball
       run: sudo ./build.sh etc/terraform.conf
+      
+    - uses: actions/cache@v3.3.1
+      with:
+        path: binary/
+        key: tarball-rpi4-${{ github.sha }}
+
+  deploy_rpi4:
+    needs: build_rpi4
+    runs-on: buildjet-4vcpu-ubuntu-2204
+    steps:     
+    - uses: actions/checkout@v3.1.0
+    
+    - uses: actions/cache@v3.3.1
+      with:
+        path: binary/
+        key: tarball-rpi4-${{ github.sha }}
+        
+    - name: Deploy to partition
+      run: sudo ./debos-docker -m 10G raspberrypi.yaml
+      
+    - name: Place output folder
+      run: sudo mkdir -p builds/rpi4
+      
+    - name: Move to output folder
+      run: sudo mv Rhino*rpi4.img builds/rpi4/
 
     - uses: actions/upload-artifact@v3.1.0
       with:
         name: Rhino Linux IMG (RPI4)
-        path: builds/arm64/
+        path: builds/rpi4/
