--- a/etc/auto/config
+++ b/etc/auto/config
@@ -9,7 +9,7 @@ lb config noauto \
     --mode debian \
     --initramfs none \
     --initsystem systemd \
-    --system none \
+    --system normal \
     --bootappend-live "boot=live config hostname=pi username=pi" \
     --distribution "./$BASECODENAME" \
     --parent-distribution "./$BASECODENAME" \
