--- a/etc/config/includes.chroot/usr/share/onboard/onboard-defaults.conf
+++ b/etc/config/includes.chroot/usr/share/onboard/onboard-defaults.conf
@@ -24,6 +24,9 @@ dock-expand=True
 dock-height=360
 width=720
 
+[auto-show]
+enabled=True
+
 [typing-assistance.word-suggestions]
 enabled=True
 spelling-suggestions-enabled=True
