--- a/etc/auto/config
+++ b/etc/auto/config
@@ -15,8 +15,8 @@ lb config noauto \
     --parent-distribution "./$BASECODENAME" \
     --archive-areas "main restricted universe multiverse" \
     --parent-archive-areas "main restricted universe multiverse" \
-    --linux-packages "linux-image linux-headers linux-modules linux-tools" \
-    --linux-flavours "6.2.0-1003-raspi" \
+    --linux-packages "linux-image linux-headers linux-modules linux-tools linux-firmware" \
+    --linux-flavours "raspi" \
     --mirror-bootstrap "$MIRROR_URL" \
     --parent-mirror-bootstrap "$MIRROR_URL" \
     --mirror-chroot-security "$SECURITY_URL" \
