--- a/etc/auto/config
+++ b/etc/auto/config
@@ -15,7 +15,7 @@ lb config noauto \
     --parent-distribution "./$BASECODENAME" \
     --archive-areas "main restricted universe multiverse" \
     --parent-archive-areas "main restricted universe multiverse" \
-    --linux-packages "linux-image linux-headers linux-modules linux-tools linux-firmware" \
+    --linux-packages "linux-image linux-headers linux-modules linux-modules-extra linux-tools linux-firmware" \
     --linux-flavours "raspi" \
     --mirror-bootstrap "$MIRROR_URL" \
     --parent-mirror-bootstrap "$MIRROR_URL" \
